# topohedral-optimisation

./: Cargo.toml  activate.zsh  launch.json  settings.json
.github/workflows/: ci.yml
assets/: dcsrch.py
src/: common.rs  lib.rs  scalar.rs
src/d1/: mod.rs
src/diff/: mod.rs
src/dn/: bgfs.rs  cg.rs  common.rs  mod.rs  newton.rs
src/dn/unconstrained/: bgfs.rs  cg.rs  common.rs  mod.rs  newton.rs
src/line_search/: backtracking.rs  fixed_step.rs  mod.rs  nocedal.rs  thuente.rs
src/unconstrained_min/: common.rs  conjugate_gradient.rs  mod.rs
tests/: conjugate_gradient.rs  d1.rs
