[package]
name = "topohedral-optimisation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
enable_trace = ["topohedral-tracing/enable_trace"]

[dependencies]
approx = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.21"
thiserror = "1.0.65"
topohedral-tracing = {path = "../topohedral-tracing"}
topohedral-linalg = {path = "../topohedral-linalg"} 


[dev-dependencies]
ctor = "0.2.8"
rstest = "0.24.0"