[package]
name = "topohedral-optimisation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
enable_trace = ["topohedral-tracing/enable_trace"]

[dependencies]
approx = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = "0.32.6"
log = "0.4.21"
topohedral-tracing = {path = "../topohedral-tracing"}


[dev-dependencies]
ctor = "0.2.8"